feat(pm132): add blocking notification in rs-notifier, rs-fem TULEAP-363656, TULEAP-363657 change script
feat(pm132): update after PR